[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envdoc"
version = "1.0.0"
authors = [
    {name = "Ishan Bhatt", email = "bhatt.ish89@gmail.com"},
]
description = "EnvDoc - Smart Environment Variable Management Suite | Auto-detect, analyze & fix env issues with AI-powered suggestions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
keywords = [
    "environment variables",
    "configuration management", 
    "system administration",
    "development tools",
    "code quality",
    "refactoring",
    "automation",
    "devops",
]

# Core runtime dependencies
dependencies = [
    "click>=8.0.0",
    "colorama>=0.4.4",
    "python-dotenv>=0.19.0",
    "pathspec>=0.9.0",
    "psutil>=5.8.0",
]

# Optional dependencies for enhanced features
[project.optional-dependencies]
interactive = [
    "rich>=12.0.0",
    "questionary>=1.10.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
    "coverage>=7.0.0",
]
all = [
    "envdoc[interactive,dev]",
]

[project.urls]
Homepage = "https://github.com/ibhatt089/envdoc"
Documentation = "https://github.com/ibhatt089/envdoc/wiki"
Repository = "https://github.com/ibhatt089/envdoc.git"
"Bug Reports" = "https://github.com/ibhatt089/envdoc/issues"
Changelog = "https://github.com/ibhatt089/envdoc/releases"

[project.scripts]
envdoc = "envdoc.cli:main"
env-doc = "envdoc.cli:main"
envdoctor = "envdoc.cli:main"

# Package discovery
[tool.setuptools.packages.find]
where = ["."]
include = ["envdoc*"]

# Include additional files in the distribution
[tool.setuptools.package-data]
envdoc = ["*.md", "*.txt", "*.yaml", "*.yml"]

# Development tools configuration
[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=envdoc --cov-report=term-missing --cov-report=html --cov-fail-under=80"
testpaths = [
    "tests",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.coverage.run]
source = ["envdoctor"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
